Fix bugs on IE

--- a/src/blocks/components/car-selection/_car-selection.scss
+++ b/src/blocks/components/car-selection/_car-selection.scss
@@ -1,10 +1,21 @@
 .car-selection {
-  background: linear-gradient(180deg, #ffde5c 3.7%, #ffd223 68.9%);
   box-sizing: border-box;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
   border-radius: 8px;
   max-width: 626px;
-  border: 2px solid #ffd223;
+  background: #ffd223;
+  padding: 2px;
   width: 100%;
+
+  &__inner {
+    background: linear-gradient(180deg, #ffde5c 3.7%, #ffd223 68.9%);
+    box-sizing: border-box;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    border-radius: 8px;
+    width: 100%;
+  }
 
   &__center {
     border-top: 2px solid #ffd223;
