--- a/src/blocks/components/card-question/_card-question.scss
+++ b/src/blocks/components/card-question/_card-question.scss
@@ -39,7 +39,6 @@
         box-sizing: border-box;
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
         height: 100%;
     }
 
@@ -91,6 +90,7 @@
         box-sizing: border-box;
         font-size: 15px;
         flex: 0 1 auto;
+        align-self: flex-start;
     }
 
     &__has-answer {
