--- a/src/blocks/components/logo/_logo.scss
+++ b/src/blocks/components/logo/_logo.scss
@@ -7,12 +7,7 @@
       max-width: 110px;
     }
   }
-
-
-  & img {
-    width: 100%;
-  }
-
+  
   &__text {
     margin-top: 10px;
     font-size: 14px;
