--- a/src/styles/helpers/_ui-kit.scss
+++ b/src/styles/helpers/_ui-kit.scss
@@ -68,110 +68,69 @@ iframe {
     width: 100%;
 }
 
-.icon-vk {
-    position: relative;
-
-    &:before {
-        content: '';
-        background: url(icon-vkontakte()) no-repeat;
+@mixin hover-icon($image:'') {
+    &:hover {
+        @if $image {
+            background: url("#{$image}") no-repeat center;
+            @include transition();
+        }
     }
+}
+
+.icon-vk {
+    width: 35px;
+    height: 35px;
+    background: url(icon-vkontakte()) no-repeat center;
+    @include hover-icon(icon-vkontakte());
 
     &_color {
-        position: relative;
-
-        &:before {
-            content: '';
-            background: url(icon-vkontakte('4C75A3')) no-repeat;
-            width: 35px;
-            height: 35px;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            margin: auto;
-        }
+        color:#4C75A3;
+        background: url(icon-vkontakte('4C75A3')) no-repeat center;
+        width: 35px;
+        height: 35px;
+        @include hover-icon(icon-vkontakte('3a7ac1'));
     }
 }
 
 .icon-fb {
-    position: relative;
-
-    &:before {
-        content: '';
-        background: url(icon-facebook()) no-repeat;
-        width: 35px;
-        height: 35px;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        margin: auto;
-    }
+    background: url(icon-facebook()) no-repeat center;
+    width: 35px;
+    height: 35px;
+    @include hover-icon();
 
     &_color {
-        position: relative;
-
-        &:before {
-            content: '';
-            background: url(icon-facebook('3C5A99')) no-repeat;
-            width: 35px;
-            height: 35px;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            margin: auto;
-        }
+        background: url(icon-facebook('3C5A99')) no-repeat center;
+        width: 35px;
+        height: 35px;
+        @include hover-icon(icon-facebook('3C5AB9'));
     }
 }
 
 .icon-ok {
-    position: relative;
-
-    &:before {
-        content: '';
-        background: url(icon-odnoklassniki()) no-repeat;
-    }
+    width: 35px;
+    height: 35px;
+    background: url(icon-odnoklassniki()) no-repeat center;
+    @include hover-icon();
 
     &_color {
-        position: relative;
-
-        &:before {
-            content: '';
-            background: url(icon-odnoklassniki('ED812B')) no-repeat;
-            width: 35px;
-            height: 35px;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            margin: auto;
-        };
+        background: url(icon-odnoklassniki('ED812B')) no-repeat center;
+        width: 35px;
+        height: 35px;
+        @include hover-icon(icon-odnoklassniki('ED8100'));
     }
 }
 
 .icon-google {
-    position: relative;
-
-    &:before {
-        content: '';
-        background: url(icon-google()) no-repeat;
-    }
+    background: url(icon-google()) no-repeat center center;
+    width: 20px;
+    height: 21px;
+    @include hover-icon();
 
     &_color {
-        position: relative;
-
-        &:before {
-            content: '';
-            background: url(icon-google('C4302B')) no-repeat;
-            width: 20px;
-            height: 21px;
-            top: 0;
-            bottom: 0;
-            right: 0;
-            left: 0;
-            margin: auto;
-        }
+        background: url(icon-google('C4302B')) no-repeat center;
+        width: 20px;
+        height: 21px;
+        @include hover-icon(icon-google('C43008'));
     }
 }
 
